not a bug but not supported in actual project apparently